
name:                packed-trees
version:             0.1.0.0
synopsis:            A compiler transform for operating on serialized trees.
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:  Packed.L1_Source, Packed.L2_Intermediate, Packed.L3_Target,
                    Packed.Translate, Packed.Common
  -- other-modules:       
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.8,
                       aeson, bytestring, containers, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
