
name:                packed-trees
version:             0.1.0.0
synopsis:            A compiler transform for operating on serialized trees.
-- description:
-- license:
-- license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:  Packed.HigherOrder.L1_Source, Packed.HigherOrder.L2_Intermediate,
                    Packed.HigherOrder.L3_Target,
                    Packed.HigherOrder.Translate, Packed.HigherOrder.Common,
                    Packed.FirstOrder.L1_Source,
                    Packed.FirstOrder.HaskellFrontend,
                    Packed.FirstOrder.Target
  -- other-modules:
  other-extensions:    DeriveDataTypeable

  build-depends:
    aeson,
    base >=4.8,
    bytestring,
    containers,
    GenericPretty,
    haskell-src-exts,
    language-c-quote,
    mtl,
    srcloc

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable packed-trees
  hs-source-dirs:      execs
  main-is:             Frontend.hs

  build-depends:       base,
                       haskell-src-exts,
                       packed-trees

  default-language:    Haskell2010
  ghc-options:         -Wall
