
name:                tiny-core
version:             0.1.0.0
synopsis:            Reduced GHC core / unfinished benchmark for AST manipulation.
        
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Core, TinyCore
  -- other-modules:       
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.8,
                       aeson, bytestring, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  
