
name:                treec
version:             0.1.0.0
synopsis:            A compiler transform for operating on serialized trees.
-- description:
-- license:
-- license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md, rts.c
cabal-version:       >=1.10

library
  exposed-modules:
                    Packed.FirstOrder.Common
                    Packed.FirstOrder.L1_Source,
                    Packed.FirstOrder.LTraverse
                    Packed.FirstOrder.Passes.Cursorize
                    Packed.FirstOrder.HaskellFrontend,
                    Packed.FirstOrder.SExpFrontend,
                    Packed.FirstOrder.Target
                    Packed.FirstOrder.Compiler
                    Packed.FirstOrder.Interpreter

-- First attempt, slated for removal:
                    -- Packed.HigherOrder.L1_Source, Packed.HigherOrder.L2_Intermediate,
                    -- Packed.HigherOrder.L3_Target,
                    -- Packed.HigherOrder.Translate, Packed.HigherOrder.Common,


  -- other-modules:
  other-extensions:    DeriveDataTypeable

  build-depends:
                aeson, 
                base >=4.8,
                bytestring,
                containers,
                deepseq,
                filepath,
                GenericPretty, pretty,
                haskell-src-exts,
                language-c-quote,
                mainland-pretty,
                mtl,
                parsec,
                srcloc,
                s-cargot,
                text,
                optparse-applicative,
                process,
                directory,
                -- time,
                clock
--                tslogger,
                
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fdefer-typed-holes -XScopedTypeVariables -XPatternSynonyms -XDeriveGeneric -XDeriveFunctor -XNamedFieldPuns
-- This can break things:
-- -XDeriveAnyClass 
    
executable treec
  hs-source-dirs:      execs
  main-is:             Frontend.hs

  build-depends:       base,
                       haskell-src-exts,
                       filepath,
                       treec

  default-language:    Haskell2010
  ghc-options:         -Wall -fdefer-typed-holes

  
test-suite test-treec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs

  build-depends:       base,
                       treec, containers,
                       tasty, tasty-hunit, tasty-th

  default-language:    Haskell2010
  ghc-options:         -Wall -fdefer-typed-holes
