name:                  gibbon
version:               0.1.0.0
synopsis:              A compiler for operating on serialized trees.
-- description:
-- license:
-- license-file:          LICENSE
author:                Ryan Newton
maintainer:            rrnewton@gmail.com
-- copyright:
-- category:
build-type:            Simple
extra-source-files:    README.md, cbits/rts.c
cabal-version:         >=1.10

flag LLVM_ENABLED
  description:         Enable LLVM backend
  default:             False

library
  exposed-modules:     Packed.FirstOrder.Common
                       Packed.FirstOrder.GenericOps
                       Packed.FirstOrder.Compiler
                       Packed.FirstOrder.DynFlags
                       Packed.FirstOrder.HaskellFrontend
                       Packed.FirstOrder.TargetInterp
                       Packed.FirstOrder.L1.Syntax
                       Packed.FirstOrder.L1.Typecheck
                       Packed.FirstOrder.L2.Syntax
                       Packed.FirstOrder.L2.Typecheck
                       Packed.FirstOrder.L2.Examples
                       Packed.FirstOrder.L4.Syntax
                       Packed.FirstOrder.L1.Interp
                       Packed.FirstOrder.L2.Interp
                       Packed.FirstOrder.L3.Syntax
                       Packed.FirstOrder.L3.Typecheck
                       Packed.FirstOrder.SExpFrontend

                       -- compiler passes, roughly in the order they're run
                       Packed.FirstOrder.Passes.Freshen
                       Packed.FirstOrder.Passes.Flatten
                       Packed.FirstOrder.Passes.InlineTriv
                       Packed.FirstOrder.Passes.DirectL3
                       Packed.FirstOrder.Passes.AddLayout
                       Packed.FirstOrder.Passes.InferLocations
                       Packed.FirstOrder.Passes.RemoveCopies
                       Packed.FirstOrder.Passes.InferMultiplicity
                       Packed.FirstOrder.Passes.InferEffects
                       Packed.FirstOrder.Passes.RouteEnds
                       Packed.FirstOrder.Passes.BoundsCheck
                       Packed.FirstOrder.Passes.ThreadRegions
                       Packed.FirstOrder.Passes.Cursorize
                       Packed.FirstOrder.Passes.FindWitnesses
                       Packed.FirstOrder.Passes.ShakeTree
                       Packed.FirstOrder.Passes.HoistNewBuf
                       Packed.FirstOrder.Passes.Unariser
                       Packed.FirstOrder.Passes.Lower
                       Packed.FirstOrder.Passes.FollowRedirects
                       Packed.FirstOrder.Passes.RearrangeFree
                       Packed.FirstOrder.Passes.Codegen

  -- other-modules:
  other-extensions:    DeriveDataTypeable CPP

  build-depends:       base                     >= 4.9       &&  < 4.12
                     , bytestring               >= 0.10.8.1  &&  < 0.11
                     , text                     >= 1.2.3     &&  < 1.3
                     , process                  >= 1.4.3     &&  < 1.7
                     , filepath                 >= 1.4.1     &&  < 1.5
                     , directory                >= 1.3       &&  < 1.4
                     , containers               >= 0.5.7.1   &&  < 0.6
                     , deepseq                  >= 1.4.2     &&  < 1.5
                     , mtl                      >= 2.2.1     &&  < 2.3
                     , transformers             >= 0.5.2     &&  < 0.6
                     , clock                    >= 0.7.1     &&  < 0.8
                     -- Parsers:
                     , parsec                   >= 3.1.13    &&  < 3.2
                     , optparse-applicative     >= 0.13.2    &&  < 0.15
                     , haskell-src-exts         >= 1.20.2    &&  < 1.21
                     , haskell-src-exts-simple  >= 1.20      &&  < 1.21
                     , s-cargot                 >= 0.1.3     &&  < 0.2
                     , srcloc                   >= 0.5.1     &&  < 0.6
                     , symbol                   >= 0.2.4     &&  < 0.3
                     -- Pretty printers:
                     , pretty                   >= 1.1.1.3   &&  < 1.2
                     , language-c-quote         >= 0.12.1    &&  < 0.13
                     , GenericPretty            >= 1.2.1     &&  < 1.3
                     , mainland-pretty          >= 0.6.1     &&  < 0.8
-- Brings in lots of ekmett dependencies:
--                     , either

  if flag(LLVM_ENABLED)
    exposed-modules:   Packed.FirstOrder.Passes.LLVM.Codegen
                       Packed.FirstOrder.Passes.LLVM.Monad
                       Packed.FirstOrder.Passes.LLVM.Global
                       Packed.FirstOrder.Passes.LLVM.Gibbon
                       Packed.FirstOrder.Passes.LLVM.Instruction
                       Packed.FirstOrder.Passes.LLVM.Terminator
                       Packed.FirstOrder.Passes.LLVM.Type
                       Packed.FirstOrder.Passes.LLVM.Utils

    build-depends:     llvm-hs-pure,
                       llvm-hs

    cpp-options:       -DLLVM_ENABLED

  hs-source-dirs:      src
  default-language:    Haskell2010
-- TEMP: Turning off typed holes and unused-top-level warnings for now [2017.08.25]:
--  ghc-options:         -Wno-all
--  ghc-options:         -Wall -fno-warn-typed-holes -Wno-unused-top-binds -fdefer-typed-holes -fno-warn-orphans
  ghc-options:         -Wredundant-constraints
                       -Wall -Wno-unused-top-binds -Wno-orphans
                       -Wno-partial-type-signatures
                       -Wno-typed-holes -fdefer-typed-holes
  default-extensions:  ScopedTypeVariables PatternSynonyms DeriveGeneric DeriveFunctor
                       NamedFieldPuns TupleSections TypeFamilies
                       PartialTypeSignatures
                       -- This can break things: DeriveAnyClass

executable gibbon
  hs-source-dirs:      app
  main-is:             Frontend.hs

  build-depends:       base
                     , haskell-src-exts
                     , filepath
                     , gibbon

  default-language:    Haskell2010
  ghc-options:         -Wall -rtsopts -fdefer-typed-holes


test-suite test-gibbon
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs

  build-depends:       base,
                       gibbon, containers,
                       filepath, directory, process,
                       srcloc,
                       mtl, transformers,
                       tasty, tasty-hunit, tasty-th

  other-modules:       RouteEnds
                       InferEffects
                       InferLocations
                       Unariser
                       InferMultiplicity
                       AddLayout
                       Compiler
                       L2.Typecheck
                       L1.Typecheck
                       L3.Typecheck

  default-language:    Haskell2010
  ghc-options:         -fdefer-typed-holes
