cabal-version:      >= 1.10
name:               gibbon-ghc-plugin
version:            0.1.0.0
author:             Chaitanya Koparkar
maintainer:         ckoparkar@gmail.com
build-type:         Simple

library
    exposed-modules:  Gibbon.Plugin
    hs-source-dirs:   src
    build-depends:
                    -- base >= 4.9 &&  < 4.16
                    -- , ghc-lib == 9.0.1.20210324
                      base == 4.15.*
                    , ghc == 9.0.1
                    , containers
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables