cabal-version:       >=1.10
name:                gibbon-stdlib
version:             0.1.0.0
author:              Chaitanya Koparkar
maintainer:          ckoparkar@gmail.com
build-type:          Simple

library
  exposed-modules:     Gibbon.Prim
                       Gibbon.Vector
                       Gibbon.Vector.Parallel
                       Gibbon.List
                       Gibbon.Prelude

  ghc-options:         -Wall -Wcompat -fdefer-typed-holes
  default-extensions:  ScopedTypeVariables CPP NoImplicitPrelude
  build-depends:       base >=4.10 && <4.15
  default-language:    Haskell2010
