cabal-version:       >=1.10
name:                gibbon-stdlib
version:             0.1
author:              Chaitanya Koparkar
maintainer:          ckoparkar@gmail.com
build-type:          Simple

library
  exposed-modules:     Gibbon.Prim
                       Gibbon.Prelude
                       Gibbon.Vector
                       Gibbon.Vector.Parallel
                       Gibbon.List
  build-depends:       base >=4.10 && <4.16
  ghc-options:         -Wall -Wcompat -fdefer-typed-holes
  default-extensions:  ScopedTypeVariables
                       CPP
                       NoImplicitPrelude
  default-language:    Haskell2010
