cabal-version:       >=1.10
name:                gibbon-stdlib
version:             0.1
author:              Chaitanya Koparkar
maintainer:          ckoparkar@gmail.com
build-type:          Simple
tested-with:           GHC==9.0.1
                     -- -- We need to put linear types in gibbon-stdlib
                     -- -- behind CPP to make it build with GHC < 9.
                     -- , GHC==8.10.4
                     -- , GHC==8.8.4
                     -- , GHC==8.6.5
                     -- , GHC==8.4.4

library
  exposed-modules:     Gibbon.Prim
                       Gibbon.Prelude
                       Gibbon.Vector
                       Gibbon.Vector.Parallel
                       Gibbon.List
                       Gibbon.PList
		       Gibbon.Maybe
  build-depends:       base >=4.11 && <4.16
  ghc-options:         -Wall -Wcompat -fdefer-typed-holes
  default-extensions:  ScopedTypeVariables
                       CPP
                       NoImplicitPrelude
  default-language:    Haskell2010
