cabal-version:       >=1.10

name:                gibbon-examples
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     BinTree
  build-depends:       base == 4.17.*
                     , plugin0
                     , plugin1
                     , inline-c
  ghc-options: -Wall -Wcompat -fdefer-typed-holes
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
                       -- -fplugin=Gibbon.Plugin
                       -fplugin=Gibbon.Plugin1

                       "-optl-Wl,--allow-multiple-definition"
                       -- "-optl-Wl,--whole-archive"
                       -- "-optl-Wl,-Bstatic"
                       -- "-optl-Wl,-L/home/ckoparka/chai/tree-velocity/gibbon-ghc-integration/plugin1/cbits/"
                       -- "-optl-Wl,-ltest2"
                       -- "-optl-Wl,-Bdynamic"
                       -- "-optl-Wl,--no-whole-archive"

                       -dcore-lint
                       -ddump-simpl -dsuppress-all -ddump-to-file


executable run-gibbon-examples
  hs-source-dirs:      app
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base, gibbon-examples
  ghc-options:
                       -- "-with-rtsopts=-T"
                       -- "-with-rtsopts=-s"
                       -dcore-lint