cabal-version:       >=1.10

name:                gibbon-examples
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     BinTree
  build-depends:       base
                     , inline-c
                     , binary
                     , gibbon-plugin
  ghc-options: -Wall -Wcompat -fdefer-typed-holes
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
                       -O2
                       -fplugin=Gibbon.Plugin

                       -- "-optl-Wl,--allow-multiple-definition"
                       -- "-optl-Wl,--whole-archive"
                       -- -- "-optl-Wl,-Bstatic"
                       -- -- "-optl-Wl,-L/home/ckoparka/chai/tree-velocity/gibbon-ghc-integration/plugin1/cbits/"
                       -- -- "-optl-Wl,-ltest2"
                       -- "-optl-Wl,-I/home/ckoparka/chai/tree-velocity/gibbon-rts/build"
                       -- "-optl-Wl,-L/home/ckoparka/chai/tree-velocity/gibbon-rts/build"
                       -- "-optl-Wl,-lgibbon_rts_ng"
                       -- -- "-optl-Wl,-Bdynamic"
                       -- -- "-optl-Wl,-L/home/ckoparka/chai/tree-velocity/gibbon-rts/build"
                       -- "-optl-Wl,--no-whole-archive"

                       -dcore-lint
                       -ddump-simpl -dsuppress-all -ddump-to-file

  -- include-dirs: "../../gibbon-rts/build"
  -- extra-lib-dirs: "../../gibbon-rts/build"
  extra-libraries: gibbon_rts_ng
  extra-lib-dirs: /home/artem/data/Dev/gibbon/gibbon/gibbon-rts/build


executable run-gibbon-examples
  hs-source-dirs:      app
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base, gibbon-examples, binary, bytestring, deepseq, time
  ghc-options:         -O2
                       -dcore-lint
  -- include-dirs:        "../../gibbon-rts/build"
  -- extra-lib-dirs:      "../../gibbon-rts/build"
  extra-libraries:     gibbon_rts_ng
  extra-lib-dirs:      /home/artem/data/Dev/gibbon/gibbon/gibbon-rts/build
  ghc-options:
              -- "-optl-Wl,-I/home/ckoparka/chai/tree-velocity/gibbon-rts/build"
                        "-optl-Wl,-L/home/artem/data/Dev/gibbon/gibbon/gibbon-rts/build"
