cabal-version:       2.0

name:                gibbon-examples
version:             0.1.0.0
build-type:          Simple

executable run-gibbon-examples
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       BinTree, Measure
  build-depends:       base
                     , inline-c
                     , binary
                     , deepseq, time, bytestring
                     , gibbon-plugin
  ghc-options:
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
                       -O2
                       -fplugin=Gibbon.Plugin
                       "-optl-Wl,--allow-multiple-definition"
                       "-optl-Wl,-rpath,/home/artem/data/Dev/gibbon/gibbon/gibbon-rts/build"

  extra-libraries: gibbon_rts_ng
  extra-lib-dirs: /home/artem/data/Dev/gibbon/gibbon/gibbon-rts/build
